feat: report endpoints created
