# src/routes/reports.routes.js
@@ -1,9 +1,10 @@
 import { Router } from 'express';
+import reportController from '../controllers/report.controller.js';
 
 const router = Router();
 
-router.get('/', (req, res) => {
-  res.send('Hello World!');
-});
+router.get('/monthly', reportController.getMonthlyReport);
+router.get('/yearly', reportController.getYearlyReport);
+router.get('/categories', reportController.getCategoriesReport);
 
 export default router;
